# fishgame-macroquad

./: Cargo.toml  README.md  build.rs  match.lua  match_rpc.lua
assets/: map.json
client/: Cargo.toml
client/assets/: map.json
client/src/: main.rs
client/web/: a.js  fishgame.wasm  gl-0.1.20.js  index.html  quad-net.js
core_plugin/: Cargo.toml  README.md
core_plugin/src/: lib.rs
docker/: .gitignore  config.yml  docker-compose.yml
docker/modules/: leaderboard.lua
nakama_modules/: match.lua  persistent_match.lua
plugin_api/: Cargo.toml
plugin_api/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: bullets.rs  camera.rs  decoration.rs  global_events.rs  gui.rs  item.rs  level_background.rs  main.rs  nakama.rs  net_syncronizer.rs  nodes.rs  pickup.rs  player.rs  plugin.rs  remote_player.rs  weapons.rs
src/gui/: authentication.rs  lobby.rs  main_menu.rs  style.rs  waitscreen.rs
src/nakama/: wasm.rs
src/nodes/: bullets.rs  camera.rs  fxses.rs  global_events.rs  item.rs  level_background.rs  nakama.rs  net_syncronizer.rs  pickup.rs  player.rs  remote_player.rs
src/nodes/nakama/: nakama_realtime_game.rs
web/: fishgame.wasm  gl-0.1.20.js  gl-0.1.22.js  index.html  mq_js_bundle.js  quad-nakama.js  quad-net.js  sapp_jsutils.js
web/assets/: map.json
