[workspace]
members = ["client", "server", "shared"]

[patch.crates-io]
macroquad = { git = "https://github.com/not-fl3/macroquad.git" }

#[patch.'https://github.com/not-fl3/macroquad.git']
#macroquad = { path = "../macroquad" }

#[patch.'https://github.com/not-fl3/quad-net.git']
#quad-net = { path = "../quad-net" }

#[patch.crates-io]
#macroquad = { path = "../macroquad" }
#miniquad = { path = "../miniquad" }
#megaui = { path = "../megaui" }
#sapp-jsutils = { path = "../sapp-jsutils" }

