[package]
name = "fishgame"
version = "0.1.0"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"

[dependencies]
nanoserde = "0.1"
macroquad = { git = "https://github.com/not-fl3/macroquad.git" }
physics-platformer = { git = "https://github.com/not-fl3/macroquad.git" }
macroquad-tiled = { git = "https://github.com/not-fl3/macroquad.git" }
macroquad-particles = { git = "https://github.com/not-fl3/macroquad.git", features = ["nanoserde"] }
#macroquad-profiler = { git = "https://github.com/not-fl3/macroquad.git" }
bitfield = "0.13"
nakama-rs = { git = "https://github.com/not-fl3/nakama-rs.git" }
base64 = "0.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1"

[patch.crates-io]
#macroquad = { git = "https://github.com/not-fl3/macroquad.git" }
macroquad = { path = "../macroquad" }

[patch.'https://github.com/not-fl3/macroquad.git']
macroquad = { path = "../macroquad" }

#macroquad-tiled = { path = "../macroquad/tiled" }

macroquad-particles = { path = "../macroquad/particles" }
# physics-platformer = { path = "../macroquad/physics-platformer" }
# macroquad-profiler = { path = "../macroquad/profiler" }

#nanoserde = { path = "../nanoserde" }
#macroquad = { path = "../macroquad" }
# miniquad = { path = "../miniquad" }
# megaui = { path = "../megaui" }
# sapp-jsutils = { path = "../sapp-jsutils" }
