[package]
name = "fishgame"
version = "0.1.0"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"

[dependencies]
nanoserde = "0.1"
macroquad = "0.3"
macroquad-platformer = "0.1"
macroquad-tiled = "0.1"
macroquad-particles = {version = "0.1", features = ["nanoserde"] }
bitfield = "0.13"
nakama-rs = "0.1"
base64 = "0.13"
wasm_plugin_host = { version = "0.1.6", default-features = false, features = ["serialize_json"] }
plugin_api = { path = "./plugin_api" }

