[package]
name = "fishgame"
version = "0.1.0"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#macroquad = "0.3.0-alpha.14"
macroquad = { git = "https://github.com/not-fl3/macroquad.git" }
physics-platformer = { git = "https://github.com/not-fl3/macroquad.git" }
macroquad-tiled = { git = "https://github.com/not-fl3/macroquad.git" }
