[package]
name = "fishgame"
version = "0.1.0"
authors = ["Fedor Logachev <not.fl3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#macroquad = "0.3.0-alpha.14"
nanoserde = "0.1"
macroquad = { git = "https://github.com/not-fl3/macroquad.git" }
physics-platformer = { git = "https://github.com/not-fl3/macroquad.git" }
macroquad-tiled = { git = "https://github.com/not-fl3/macroquad.git" }
macroquad-particles = { git = "https://github.com/not-fl3/macroquad.git", features = ["nanoserde"] }
macroquad-profiler = { git = "https://github.com/not-fl3/macroquad.git" }
shared = { path = "../shared" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
server = { path = "../server" }

