[package]
name = "core_plugin"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

[lib]
 crate-type = ["cdylib"]

[dependencies]
plugin_api = { path = "../plugin_api" }
wasm_plugin_guest = { version = "0.1.4", default-features = false, features = ["serialize_json"] }
image = { version = "0.23", default-features = false, features = ["png"] }
wee_alloc = "0.4.5"
once_cell = "1.7.2"
futures-lite = "1.11.3"
async-executor = "1.4.1"
lazy_static = "1.4.0"
