[package]
name = "core_plugin"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

[lib]
 crate-type = ["cdylib"]

[dependencies]
plugin_api = { path = "../plugin_api" }
wasm_plugin_guest = { version = "0.1.4", default-features = false, features = ["serialize_json"] }
image = { version = "0.23", default-features = false, features = ["png"] }
lazy_static = "1.4.0"
