[package]
name = "core_plugin"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

[lib]
 crate-type = ["rlib", "cdylib"]

[features]
inline = []

[dependencies]
plugin_api = { path = "../plugin_api" }
image = { version = "0.23", default-features = false, features = ["png"] }
lazy_static = "1.4.0"
wasm_plugin_guest = { version = "0.1.5", default-features = false, features = ["serialize_json"] }
